# ai-co

./: .claude_hierarchy_reminder.md  .claude_incident_consultation_protocol.md  .coverage  .coveragerc  .elder-guild-enhanced-quality.conf  .env.example  .env.local  .env.template  .env.test  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  .pylintrc  .pythonpath  A2A_COMMUNICATION_TEST_RESULTS.md  A2A_PERFORMANCE_ANALYSIS_REPORT.md  AI_COMPANY_4SAGES_OPTIMIZATION_ROADMAP_2025.md  AI_COMPANY_INSTANCES_REPORT.md  AI_COMPANY_SUPERFAST_EXECUTION_FINAL_REPORT.md  AI_PRIORITY_OPTIMIZER_IMPLEMENTATION.md  ANCIENT_ELDER_A2A_FINAL_AUDIT_REPORT_20250717_222020.md  ANCIENT_ELDER_A2A_FINAL_AUDIT_REPORT_20250717_222607.md  ANCIENT_ELDER_A2A_FINAL_AUDIT_REPORT_20250717_222955.md  ANCIENT_ELDER_A2A_FINAL_AUDIT_REPORT_20250719_005221.md  AUTO_QUALITY_EVOLUTION_SYSTEM.md  CI_CD_IMPROVEMENTS_SUMMARY.md  CLAUDE.md  CLAUDE_ELDER_BEHAVIORAL_PROTOCOL.md  CLAUDE_IDENTITY_ENFORCEMENT_SYSTEM.py  CLAUDE_IDENTITY_PROTOCOL.md  COMMIT_BEST_PRACTICES_GUIDE.md  COMPREHENSIVE_AUDIT_REPORT.md  CONFIG_INTEGRATION_COMPLETION_REPORT.md  CONTRIBUTING.md  DAILY_WORK_COMPLETION_REPORT_2025_07_08.md  DAILY_WORK_COMPLETION_REPORT_2025_07_09.md  DAILY_WORK_PLAN_2025_07_09.md  DATABASE_INTEGRATION_PLAN.md  DATA_ANALYSIS_README.md  (+419 more)
.ssh_backup/: README.md  id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub
ai-company-web/: README.md  deployment-guide.md  docker-compose.yml  next.config.ts  wrangler.toml
ai-elder-project/: PROJECT_KNOWLEDGE.md
ai_commands/: ai_log_viewer_test.sh  aliases.sh  error_test_step1.sh  execute_fix_now.sh  fix_ai_restart_immediate.sh  kb_test_1751872936.sh  kb_test_1751872963.sh  kb_test_1751872991.sh  kb_test_1751873209.sh  kb_test_1751873463.sh  kb_test_1751873487.sh  kb_test_1751874525.sh  kb_test_1751877064.sh  kb_test_1751877127.sh  kb_test_1751877247.sh  kb_test_1751877279.sh  kb_test_1751877361.sh  kb_test_1751877390.sh  kb_test_1751877425.sh  kb_test_1751877495.sh  kb_test_1751877998.sh  kb_test_1751878308.sh  kb_test_1751878508.sh  kb_test_1751878591.sh  kb_test_1751878641.sh  kb_test_1751878657.sh  kb_test_1751878837.sh  kb_test_1751878976.sh  kb_test_1751879124.sh  kb_test_1751879169.sh  kb_test_1751879197.sh  kb_test_1751879397.sh  (+65 more)
elders_guild_safe_backup_20250723_203104/docker/: pyproject.toml
(+10450 files in other folders)
